# hasselize

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/ai-backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
apps/ai-backend/api/: __init__.py  main.py
apps/ai-backend/api/routes/: health.py  transform.py
apps/ai-backend/config/: __init__.py
apps/ai-backend/core/: __init__.py  config.py  gpu_manager.py  logging.py  security.py
apps/ai-backend/models/: __init__.py  enums.py  requests.py  responses.py
apps/ai-backend/scripts/: download_models.py
apps/ai-backend/services/: __init__.py  image_service.py  model_loader.py  storage_service.py
apps/ai-backend/tests/: conftest.py
apps/ai-backend/tests/test_api/: test_health.py
apps/ai-backend/utils/: __init__.py  image_utils.py  prompt_builder.py
apps/web/: .env.local.example  Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/profile/: loading.tsx  page.tsx
apps/web/components/: AuthButton.tsx  BeforeAfterSlider.tsx  FeedCard.tsx  ImageUploader.tsx
apps/web/public/: manifest.json  sw.js
docs/: KANBAN.md  README_LORA.md  README_R2.md  README_SUPABASE.md  ai_plan.md  github_setup_guide.md  prd_hasselize_v1.md
supabase/migrations/: 001_initial_schema.sql  002_add_profile_trigger.sql
(+3 files in other folders)
